ingress-policy-mosquitto.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mosquitto-ingress
  namespace: suite
spec:
  podSelector:
    matchLabels:
      app: mosquitto
  policyTypes: ["Ingress"]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: scrypted
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: suite
      ports:
        - protocol: TCP
          port: 1883
